--- a/indexxx.html
+++ b/indexxx.html
@@ -57,6 +57,7 @@
                 <li><b>Email</b> : mark_lee@yahoo.com </li>
                 <li><b>No. HP</b> : 081234567890</li>
                 <li><b>Line</b> : marklee99</li>
+                <li><b>Hobi</b> : Main dan belajar</li>
                 </ul>
             </div>
 
