--- a/indexxx.html
+++ b/indexxx.html
@@ -75,6 +75,7 @@
                     <li><b>Certified</b> by Oracle </li>
                     <li><b>Certified</b> by SAP </li>
                     <li><b>Member</b> of HMSI </li>    
+                    <li><b>Member</b> of GERIGI ITS</li>
                     </ul>           
             
                 <h2 style="color: rgb(0, 86, 247)"><span class="a">PORTFOLIO</span></h2>
