--- a/indexxx.html
+++ b/indexxx.html
@@ -64,6 +64,7 @@
             <div class="col-sm-8">
                 <h2 style="color: rgb(0, 86, 247)"><span class="a" >EDUCATION</span></h2>
                 <ul class="b">
+                <li><b>2004</b> TK MUhajirin</li>
                 <li> <b>2006</b> SDN Pare 2  </li>
                 <li><b>2012</b> SMPN 2 Pare </li>
                 <li><b>2015</b> SMAN 2 Pare </li>
